Fixing Cloud CI build.